增加actuator 监控,并且打开所有监控

--- a/src/main/resources/application-local1.yml
+++ b/src/main/resources/application-local1.yml
@@ -10,5 +10,5 @@ spring:
 eureka:
   client:
     service-url:
+      defaultZone: http://localhost:10001/eureka/
 
-      defaultZone: http://localhost:10001/eureka/,http://localhost:10002/eureka/,http://localhost:10003/eureka/
