--- a/src/main/resources/application-local2.yml
+++ b/src/main/resources/application-local2.yml
@@ -1,13 +1,13 @@
 server:
-  port: 20001
+  port: 20002
 
 
 spring:
   application:
-    name: eureka_client1
+    name: eureka_client2
 
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10001/eureka/,http://localhost:10002/eureka/,http://localhost:10003/eureka/
+      defaultZone: http://localhost:10001/eureka/
