--- a/src/main/resources/application-local3.yml
+++ b/src/main/resources/application-local3.yml
@@ -1,14 +1,14 @@
 server:
-  port: 20001
+  port: 20003
 
 
 spring:
   application:
-    name: eureka_client1
+    name: eureka_client3
 
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10001/eureka/,http://localhost:10002/eureka/,http://localhost:10003/eureka/
+      defaultZone: http://localhost:10001/eureka/
 
