--- a/src/main/resources/application-local2.yml
+++ b/src/main/resources/application-local2.yml
@@ -5,9 +5,13 @@ server:
 spring:
   application:
     name: eureka_client2
-
+  cloud:
+    inetutils:
+      ignoredInterfaces[0]: lo
+      ignoredInterfaces[1]: eth0
+      ignoredInterfaces[2]: eth1
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10001/eureka/
+      defaultZone: http://host.docker.internal:10001/eureka/
